2-3 working functions. Also, Clara can't write Makefiles

--- a/Clara/Makefile
+++ b/Clara/Makefile
@@ -9,6 +9,16 @@
 # | Standard Targets |
 # +------------------+
 
+alint.o: alint.c
+	cc -g -Wall  -c -o alint.o alint.c
+alint: alint.o
+	cc -o alint alint.o
+test: test.c alint.c
+	cc -o test test.c -lm
+
 # +--------------------+---------------------------------------------
 # | Additional Targets |
 # +--------------------+
+
+alint.test: alint.c test.c
+	cc -g -Wall -o alint.test alint.c test.c -lm
