All done, ready for extensive testing

--- a/Pouya/Makefile
+++ b/Pouya/Makefile
@@ -17,7 +17,8 @@ libarray_operations.a: array_operations_addLast.o array_operations_free.o \
 	rm -f $@
 	ar rv $@ $^
 
-libapi.a: api_int_trans.o api_free.o  api_str_trans.o api_operands.o
+libapi.a: api_int_trans.o api_free.o  api_str_trans.o api_operands.o \
+	 api_long_trans.o api_double_trans.c
 	rm -f $@
 	ar rv $@ $^
 
